fixtures/runtime/invalid/runtime-error.php
<?php
// phase4: kind=invalid expected_reference=runtime_error
undefined_runtime_phase4_function();
